--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -12,6 +12,5 @@
 @using H.LowCode.DesignEngine.PropertyPanel
 @using H.LowCode.Blazor.Utility
 @using H.LowCode.DesignEngine.Services
-@using H.LowCode.Metadata
 @using Newtonsoft.Json.Schema
-@using H.LowCode.Metadata.Components
+@using H.LowCode.Schema
