移除对 Newtonsoft.Json.Schema 的依赖

--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DragItem.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DragItem.razor
@@ -1,5 +1,5 @@
 ﻿<div draggable="true" class="dragitem" @ondragstart="()=>OnDragStart()" @onclick="()=>OnClick()">
-    @ComponentSchema.ComponentJsonSchema.Title
+    @ComponentSchema.ComponentPropertySchema.Title
 </div>
 
 @code
