--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/_Imports.razor
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.Html/_Imports.razor
@@ -2,6 +2,6 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using H.LowCode.Theme.Html.Shared
 @using H.LowCode.RenderEngine
-@using Newtonsoft.Json.Schema
+@using H.LowCode.Schema
 @using System.Net.Http
 @using System.Net.Http.Json
