--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -80,7 +80,7 @@
 
     private void OnClick()
     {
-        BlazorEventDispatcher.Dispatch("designerengine.dropitem.onblur", null);
+        BlazorEventDispatcher.Trigger("designerengine.dropitem.onblur", null);
     }
 
     private void OnItemClick(ComponentSchema componentSchema)
