--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/wwwroot/designerengine.css
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/wwwroot/designerengine.css
@@ -34,7 +34,7 @@
 .dropitem {
     position: relative;
     display: flex;
-    height: 80px;
+    height: 100%;
     margin: 1px;
     padding: 20px 8px 5px 8px;
     border: #ffffff solid 2px;
