--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
@@ -31,7 +31,7 @@
             <DesignPanel ComponentSchemas="@ComponentSchemas"></DesignPanel>
         </Content>
         <Sider Class="designpage" Style="flex: auto; max-width: max-content; min-width: 250px;" Theme="SiderTheme.Light">
-            <PropertyPanel></PropertyPanel>
+            <SettingPanel></SettingPanel>
         </Sider>
     </AntDesign.Layout>
 </AntDesign.Layout>
