--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/ActionSetting.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/ActionSetting.razor
@@ -1,4 +1,4 @@
-﻿<div>StypeProperty</div>
+﻿<div>ActionSetting</div>
 
 @code {
     [Parameter]
@@ -14,6 +14,6 @@
 
     private void OnPropertyChange()
     {
-        BlazorEventDispatcher.Trigger("designerengine.styleproperty.onchange", null);
+        BlazorEventDispatcher.Trigger("designerengine.eventproperty.onchange", null);
     }
 }
