--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/PageSetting.razor
@@ -9,6 +9,6 @@
 
 @code {
     [Parameter]
-    public PagePropertySchema PagePropertySchema { get; set; }
+    public PageSettingSchema PagePropertySchema { get; set; }
 
 }
