--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/SettingPanel/StyleSetting.razor
@@ -1,4 +1,4 @@
-﻿<div>EventProperty</div>
+﻿<div>StyleSetting</div>
 
 @code {
     [Parameter]
@@ -14,6 +14,6 @@
 
     private void OnPropertyChange()
     {
-        BlazorEventDispatcher.Trigger("designerengine.eventproperty.onchange", null);
+        BlazorEventDispatcher.Trigger("designerengine.styleproperty.onchange", null);
     }
 }
