--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/Pages/FormTemplate.razor
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/Pages/FormTemplate.razor
@@ -1,6 +1,6 @@
 ﻿@page "/form/{PageId}/{DataId}"
 
-@using H.LowCode.Schema
+@using H.LowCode.Metadata
 
 @inject HttpClient Http
 @inject IRender render
