--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/Components/ContainerBase.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/Components/ContainerBase.razor
@@ -1,6 +1,5 @@
 ﻿@using H.LowCode.DesignEngine.DesignPanel
-@using H.LowCode.Schema
-@*@inject DragDropService DragDropService*@
+@using H.LowCode.Metadata
 
 <div style="height:100%;" @ondrop="OnDrop" ondragstart="event.dataTransfer.setData('text', event.target.id);" 
     @ondrop:stopPropagation @ondragstart:stopPropagation @ondragenter:stopPropagation 
@@ -8,13 +7,21 @@
     @if(ComponentSchemas == null)
     {
         <div style="width:100%; height:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;"></div>
-    }else{
-        @foreach (var componentSchema in ComponentSchemas)
+    } else {
+        @*foreach (var componentSchema in ComponentSchemas)
         {
             <DropItem ComponentSchema="componentSchema"></DropItem>
-        }
+        }*@
+        <DesignPanel Style="height: auto;" ComponentSchemas="@ComponentSchemas"></DesignPanel>
     }
 </div>
+
+@*@if(ComponentSchemas == null)
+{
+    <div style="width:100%; height:100%; background-color:#f4f4f4; border: 1px dashed #ded9d9;"></div>
+} else {
+    <DesignPanel ComponentSchemas="@ComponentSchemas"></DesignPanel>
+}*@
 
 @code {
     [Parameter]
@@ -30,7 +37,7 @@
                     builder.OpenComponent(1, typeof(Input<string>));
                     builder.CloseComponent();
                 },
-                ComponentPropertySchema = new ComponentPropertySchema()
+                ComponentPropertySchema = new ComponentSettingSchema()
                 {
                     Title = "输入框",
                     ComponentValueType = ComponentValueType.String
