--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/_Imports.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine.Components/_Imports.razor
@@ -1,3 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using AntDesign;
 @using H.LowCode.DesignEngine.Services
+@using H.LowCode.DesignEngine.DesignPanel
+@using H.LowCode.Blazor.Utility
