--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -9,7 +9,7 @@
 @using System.Text.Json
 @using H.LowCode.DesignEngine.ComponentPanel
 @using H.LowCode.DesignEngine.DesignPanel
-@using H.LowCode.DesignEngine.PropertyPanel
+@using H.LowCode.DesignEngine.SettingPanel
 @using H.LowCode.Blazor.Utility
 @using H.LowCode.DesignEngine.Services
-@using H.LowCode.Schema
+@using H.LowCode.Metadata
