--- a/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/_Imports.razor
+++ b/src/H.LowCode.RenderEngine/H.LowCode.Theme.AntBlazorPro/_Imports.razor
@@ -2,7 +2,7 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using H.LowCode.Theme.AntBlazorPro.Shared
 @using H.LowCode.RenderEngine
-@using H.LowCode.Schema
+@using H.LowCode.Metadata
 @using System.Net.Http
 @using System.Net.Http.Json
 @using AntDesign.ProLayout
